--- a/src/components/AddTaskForm/AddTaskForm.module.css
+++ b/src/components/AddTaskForm/AddTaskForm.module.css
@@ -33,6 +33,12 @@
     width: 320px;
     display: none;
   }
+
+  .formWrapper form {
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+  }
   
   .formWrapper.open {
     display: block;
