--- a/src/components/TaskItem/TaskItem.module.css
+++ b/src/components/TaskItem/TaskItem.module.css
@@ -86,6 +86,21 @@
   cursor: pointer;
 }
 
+.taskMetaGroup {
+  display: flex;
+  gap: 1.5rem;
+  margin-top: 1.5rem;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.taskMeta {
+  display: flex;
+  align-items: center;
+  font-size: 0.65rem;
+  color: #bbb;
+}
+
 .taskRow.completed .taskTitle,
 .taskRow.completed .taskDescription {
   text-decoration: line-through;
@@ -115,10 +130,4 @@
 .buttonDelete:hover {
   color: #dc2626;
   transform: scale(1.1);
-}
-
-.taskMeta {
-  font-size: 0.75rem;
-  color: #888;
-  margin-top: 0.2rem;
 }
