--- a/src/app/dashboard/Dashboard.module.css
+++ b/src/app/dashboard/Dashboard.module.css
@@ -5,9 +5,21 @@
   color: var(--foreground);
 }
 
+.taskToolBar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
 .title {
   font-size: 1.8rem;
-  margin-bottom: 1rem;
+}
+
+.taskList {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .form {
