--- a/src/components/PriorityAccordion/PriorityAccordion.module.css
+++ b/src/components/PriorityAccordion/PriorityAccordion.module.css
@@ -5,15 +5,24 @@
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
 }
 
-.accordion[open] {
-  /* background-color: #fff; */
-}
-
 .accordionHeader {
+  list-style: none;
   cursor: pointer;
   font-weight: bold;
   font-size: 1.3rem;
   margin-bottom: 0.5rem;
+
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.chevron {
+  transition: transform 0.2s ease;
+}
+
+.accordion[open] .chevron {
+  transform: rotate(180deg);
 }
 
 .empty {
