--- a/src/app/dashboard/Dashboard.module.css
+++ b/src/app/dashboard/Dashboard.module.css
@@ -9,11 +9,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 2rem;
+  margin-top: 2rem;
+  padding: 1rem;
+
 }
 
 .title {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
 }
 
 .taskList {
