--- a/src/components/SectionTabs/TaskSection/TaskSection.module.css
+++ b/src/components/SectionTabs/TaskSection/TaskSection.module.css
@@ -9,6 +9,7 @@
   transition: all 0.2s ease;
   cursor: pointer;
   box-shadow: 0 0 0 transparent;
+  border-color: var(--divider);
 }
 
 .taskRow:hover {
