--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,5 +1,5 @@
 .searchBar {
-    margin: 1rem 0 2rem 0;
+    margin: 0 0 2.5rem 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
