style: responsivdade da tela de Listas

--- a/src/components/AddTaskForm/AddTaskForm.module.css
+++ b/src/components/AddTaskForm/AddTaskForm.module.css
@@ -102,3 +102,10 @@
   background: var(--input-border);
   color: var(--foreground);
 }
+
+@media screen and (max-width: 405px) {
+  .formWrapper {
+    left: 0;
+  }
+  
+}
